test suite fixes
